# studious-engine

./: .gitignore  CMakeLists.txt  LICENSE  PULL_REQUEST_TEMPLATE.md  README  README.md  buildCore.sh  buildEmbedded.sh  collider.cpp  collider.hpp  common.h  common.hpp  devList.txt  docList.txt  doxyconfig  game.cpp  game.hpp  gameInstance.cpp  gameInstance.hpp  gameObject.cpp  gameObject.hpp  gtest_PolygonTests  inputMonitor.cpp  inputMonitor.hpp  launcher.cpp  launcher.hpp  modelImport.cpp  modelImport.hpp  physics.cpp  polygon.cpp  polygon.hpp  polygon2.cpp  setupBuild.sh  shaderLoader.cpp  shaderLoader.hpp  textLoader.cpp  textLoader.hpp
examples/2dDemo/: CMakeLists.txt  game.cpp
examples/3dDemoScene/: CMakeLists.txt  game.cpp  game.hpp  inputMonitor.cpp  inputMonitor.hpp
examples/compDemo/: CMakeLists.txt  gameTemplate.cpp  setupBuild.sh
examples/compDemo/shaders/core/: gameObject.vert  textObject.frag
examples/compDemo/shaders/es/: spriteObject.vert  uiObject.vert
misc/: config.cpp  config.hpp  config.txt  loadScene.cpp  remake.cpp
models/: modelImport  modelImport.cpp
shaders/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  coll.frag  coll.vert  fragmentshader  standardFragment.frag  standardVertex.vert  text.fragmentshader
src/main/common/headers/: common.hpp  studious_utility.hpp  winsup.hpp
src/main/engine/AnimationController/headers/: AnimationController.hpp
src/main/engine/AnimationController/src/: AnimationController.cpp
src/main/engine/AnimationController/test/headers/: AnimationControllerTests.hpp
src/main/engine/AnimationController/test/src/: AnimationControllerTests.cpp
src/main/engine/GfxController/headers/: DummyGfxController.hpp  GfxController.hpp  MockGfxController.hpp  OpenGlEsGfxController.hpp  OpenGlGfxController.hpp
src/main/engine/GfxController/src/: DummyGfxController.cpp  OpenGlEsGfxController.cpp  OpenGlGfxController.cpp
src/main/engine/Misc/headers/: GameInstance.hpp  GameScene.hpp  Image.hpp  InputController.hpp  game.hpp  inputMonitor.hpp  physics.hpp
src/main/engine/Misc/src/: DeltaTime.cpp  GameInstance.cpp  GameScene.cpp  Image.cpp  InputController.cpp  inputMonitor.cpp  physics.cpp
src/main/engine/Misc/test/headers/: PhysicsControllerTests.hpp
src/main/engine/Misc/test/src/: PhysicsControllerTests.cpp
src/main/engine/SceneObject/headers/: CameraObject.hpp  ColliderObject.hpp  ComplexCameraObject.hpp  FPSCameraObject.hpp  GameObject.hpp  GameObject2D.hpp  GameObjectStructs.hpp  SceneObject.hpp  SpriteObject.hpp  TPSCameraObject.hpp  TestObject.hpp  TextObject.hpp  TextObjectStructs.hpp  TileObject.hpp  UiObject.hpp
src/main/engine/SceneObject/src/: CameraObject.cpp  ColliderObject.cpp  ComplexCameraObject.cpp  FPSCameraObject.cpp  GameObject.cpp  GameObject2D.cpp  SceneObject.cpp  SpriteObject.cpp  TPSCameraObject.cpp  TestObject.cpp  TextObject.cpp  TileObject.cpp  UiObject.cpp
src/main/engine/SceneObject/test/: SceneObjectTests.cpp
src/main/engine/SceneObject/test/headers/: SceneObjectTests.hpp  SpriteObjectTests.hpp
src/main/engine/SceneObject/test/src/: SpriteObjectTests.cpp
src/main/engine/SceneObjectExt/headers/: ColliderExt.hpp  ImageExt.hpp  TrackExt.hpp
src/main/engine/SceneObjectExt/src/: ColliderExt.cpp  ImageExt.cpp  TrackExt.cpp
src/main/engine/headers/: CameraObject.hpp  CameraObjectStructs.hpp  DummyGfxController.hpp  GameObject.hpp  GameObjectStructs.hpp  GfxController.hpp  OpenGlGfxController.hpp  SceneObject.hpp  TextObject.hpp  TextObjectStructs.hpp  gameInstance.hpp  gameObject.hpp  inputMonitor.hpp  physics.hpp
src/main/engine/src/: CameraObject.cpp  DummyGfxController.cpp  GameObject.cpp  OpenGlGfxController.cpp  TextObject.cpp  gameInstance.cpp  gameObject.cpp  inputMonitor.cpp
src/main/example/2dDemo/: game.cpp
src/main/example/headers/: game.hpp
src/main/example/src/: game.cpp
src/main/example/vgame/: vgame.cpp
src/main/misc/headers/: config.hpp
src/main/misc/src/: config.cpp
src/main/opengl/headers/core/: glad.h
src/main/opengl/headers/es/: glad.h
src/main/opengl/src/: glad.c
src/main/opengl/src/core/: glad.c
src/main/opengl/src/es/: glad.c
src/main/shaders/: standardVertex.vert  vertexshader
src/main/shaders/core/: colliderObject.vert  spriteObject.frag  textObject.frag  textObject.vert  tileObject.frag  tileObject.vert  uiObject.frag  uiObject.vert
src/main/shaders/es/: colliderObject.frag  colliderObject.vert  gameObject.frag  gameObject.vert  spriteObject.frag  textObject.frag  textObject.vert  tileObject.frag  tileObject.vert  uiObject.frag  uiObject.vert
src/main/utilities/headers/: GifLoader.hpp  JsonParser.hpp  Logger.hpp  Material.hpp  Model.hpp  ModelImport.hpp  Polygon.hpp  SafeQueue.hpp  shaderLoader.hpp
src/main/utilities/src/: GifLoader.cpp  Logger.cpp  ModelImport.cpp  Polygon.cpp  shaderLoader.cpp
src/main/utilities/test/: ModelImportTests.cpp
src/main/utilities/test/headers/: GifLoaderTests.hpp  JsonParserTests.hpp  ModelImportTests.hpp  PolygonTests.hpp  SafeQueueTests.hpp
src/main/utilities/test/src/: GifLoaderTests.cpp  JsonParserTests.cpp  ModelImportTests.cpp  PolygonTests.cpp  SafeQueueTests.cpp
src/resources/: config.txt
src/resources/models/: Forest Scene Tri.mtl  dracula2.mtl  human2.mtl  map2.mtl  map3.mtl
